--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,29 @@
-# Django Settings
-SECRET_KEY='your-secret-key-here'
+# ============================================================================
+# Django Core Settings
+# ============================================================================
+SECRET_KEY=your-secret-key-here  # pragma: allowlist secret
 DEBUG=True
+DJANGO_SETTINGS_MODULE=config.settings.development
 ALLOWED_HOSTS=localhost,127.0.0.1
-# DJANGO_SETTINGS_MODULE=config.settings.production
+
+# ============================================================================
+# Database Configuration
+# ============================================================================
+# Development (SQLite - no additional config needed)
+# Production (PostgreSQL)
+DB_NAME=cb3portfolio_prod
+DB_USER=portfolio_user
+DB_PASSWORD=your-secure-password
+DB_HOST=localhost
+DB_PORT=5432
+
+# ============================================================================
+# Email Configuration (Production)
+# ============================================================================
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your-email@gmail.com
+EMAIL_HOST_PASSWORD=your-app-password
+DEFAULT_FROM_EMAIL=noreply@cb3portfolio.com
+SERVER_EMAIL=server@cb3portfolio.com
