feat: Add production features (Whitenoise, Structlog, CSP)
- Add Whitenoise for static file compression (Brotli)
- Add Structlog for structured logging (JSON in prod)
- Add Django 6.0 native CSP for XSS protection
- Extract inline JS to external files for CSP compliance
- Configure rotating log files and email alerts
- Add integrity checks to CDN resources

All 205 tests passing. Ready for production deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,14 @@ logs/*.log
 coverage_html/
 .coverage
 *.sql
+
+# Static files
+staticfiles/
+
+# Whitenoise compressed files
+*.gz
+*.br
+
+# Logs
+logs/
+*.log
