--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "django>=6.0,<6.1",
     "pandas>=2.3.3",
     "python-dotenv>=1.0,<2.0",
+    "structlog>=25.5.0",
+    "whitenoise[brotli]>=6.11.0",
     "yfinance>=0.2.66",
 ]
 
